[package]
name = "git-conventional"
version = "0.9.0"
authors = ["Ed Page <eopage@gmail.com>", "Jean Mertz <helloworld@rustic.games>"]
description = "A parser library for the Conventional Commit specification."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/crate-ci/git-conventional"
documentation = "http://docs.rs/git-conventional/"
repository = "https://github.com/crate-ci/git-conventional"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["parser", "git", "conventional-commit", "commit", "conventional"]
edition = "2018"

[badges]
azure-devops = { project = "crate-ci", pipeline = "git-conventional" }
codecov = { repository = "crate-ci/git-conventional" }

[dependencies]
nom = { version = "5", default-features = false, features = ["std"] }
unicase = "2.5"
doc-comment = "0.3"

[dev-dependencies]
indoc = "0.3"
