[package]
name = "git-conventional"
version = "0.11.3"
description = "A parser library for the Conventional Commit specification."
authors = ["Ed Page <eopage@gmail.com>", "Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/crate-ci/git-conventional"
documentation = "http://docs.rs/git-conventional/"
repository = "https://github.com/crate-ci/git-conventional"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["parser", "git", "conventional-commit", "commit", "conventional"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/git-conventional/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
nom = "7"
unicase = "2.5"
doc-comment = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
indoc = "1.0"
serde_test = "1.0"
